2025-12-21T01:12:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20402624884 # 1378
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-21
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 1109 3186 / 1115 3195
* notice: next accum: outdated-unq outdated-all / unq all: 1112 3190 / 1115 3195
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-06] / []

2025-12-20T01:03:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20386694411 # 1376
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-20
* notice: last 14d: unq all: 6 9
* notice: prev accum: outdated-unq outdated-all / unq all: 1105 3182 / 1115 3195
* notice: next accum: outdated-unq outdated-all / unq all: 1109 3186 / 1115 3195
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-05] / []

2025-12-19T12:28:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20370031546 # 1375
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
* notice: last 14d: unq all: 8 11
* notice: prev accum: outdated-unq outdated-all / unq all: 1105 3182 / 1114 3194
* notice: next accum: outdated-unq outdated-all / unq all: 1105 3182 / 1115 3195
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-05 2025-12-19]

2025-12-18T01:04:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20322400920 # 1372