@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-21T01:12:17Z",
+  "timestamp" : "2025-12-21T12:26:17Z",
   "count_outdated" : 3190,
   "uniques_outdated" : 1112,
-  "count" : 3195,
-  "uniques" : 1115,
+  "count" : 3196,
+  "uniques" : 1116,
   "views" : [
     {
       "timestamp": "2025-12-11T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2025-12-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
