@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 3,
+  "count": 6,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2025-12-11T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2025-12-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-12-21T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
