@@ -1,3 +1,12 @@
+2025-12-21T12:26:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20409795594 # 1379
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-21
+* notice: last 14d: unq all: 4 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 1112 3190 / 1115 3195
+* notice: next accum: outdated-unq outdated-all / unq all: 1112 3190 / 1116 3196
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-12-21]
+
 2025-12-21T01:12:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20402624884 # 1378
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-21
